syntax="proto3";
package favorite_comment;
option go_package="../favorite_comment/pb";
import "user.proto";
import "video.proto";
//message User{
//  int64 id=1;
//  string name=2;
//  int64 follow_count=3;
//  int64 follower_count=4;
//  bool is_follow=5;
//  int64 total_favorited=6;
//  int64 work_count=7;
//  int64 favorite_count=8;
//}
//message Video{
//  int64 id=1;
//  User author=2;
//  string play_url=3;
//  string cover_url=4;
//  int64 favorite_count=5;
//  int64 comment_count=6;
//  bool is_favorite=7;
//  string title=8;
//}
message FavoriteActionRequest{
  int64 user_id=1;
  string token=2;
  int64 video_id=3;
  int32 action_type=4;
}
message FavoriteActionResponse{
  int32 status_code=1;
  string status_msg=2;
}

message FavoriteListRequest{
  int64 user_id=1;
  string token=2;
}
message FavoriteListResponse{
  int32 status_code=1;
  string status_msg=2;
  repeated video.Video video_list=3;
}
message Comment{
  int64 id=1;
  user.User user=2;
  string content=3;
  string create_date=4;
}
message CommentActionRequest{
  int64 user_id=1;
  string token=2;
  int64 video_id=3;
  int32 action_type=4;
  string comment_text=5;
  int64 comment_id=6;
}
message CommentActionResponse{
  int32 status_code=1;
  string status_msg=2;
  Comment comment=3;
}

message CommentListRequest{
  string token=1;
  int64 video_id=2;
  int64 user_id=3;
}
message CommentListResponse{
  int32 status_code=1;
  string status_msg=2;
  repeated Comment comment_list=3;
}
message CommentFilterRequest{
  string comment_msg=1;
}
message CommentFilterResponse{
  string comment_msg=1;
}
message SetCommentNumRequest{
  int64 video_id=1;
  int64 num=2;
}
message SetCommentNumResponse{
}
service CommentService{
  rpc GetCommentList(CommentListRequest)returns (CommentListResponse){}
  rpc CreateComment(CommentActionRequest)returns (CommentActionResponse){}
  rpc DeleteComment(CommentActionRequest)returns (CommentActionResponse){}
  rpc CommentFilter(CommentFilterRequest)returns (CommentFilterResponse){}
  rpc SetCommentNum(SetCommentNumRequest)returns (SetCommentNumResponse){}
}
message SetFavoriteNumRequest{
  int64 video_id=1;
  int64 num=2;
}
message SetFavoriteNumResponse{
}
message UserFavoriteInfoRequest{
  int64 user_id=1;
}
message UserFavoriteInfoResponse{
  int64 total_favorited=1;
  int64 favorite_count=2;
}
service FavoriteService{
  rpc SetFavorite(FavoriteActionRequest)returns (FavoriteActionResponse){}
  rpc CancelFavorite(FavoriteActionRequest)returns (FavoriteActionResponse){}
  rpc GetFavoriteList(FavoriteListRequest)returns (FavoriteListResponse){}
  rpc SetFavoriteNum(SetFavoriteNumRequest)returns (SetFavoriteNumResponse){}
  rpc UserFavoriteInfo(UserFavoriteInfoRequest)returns (UserFavoriteInfoResponse){}
}
message HotFeedRequest{
  int64 num=1;
}
message HotCount{
  int64 vid=1;
  int64 favorite_num=2;
  int64 comment_num=3;
}
message HotFeedResponse{
  repeated HotCount hot_counts=1;
}
service HotFeed{
  rpc GetHotFeed(HotFeedRequest)returns (HotFeedResponse){}
}
message VideoInfoRequest{
  int64 user_id=1;
  int64 video_id=2;
}
message VideoInfoResponse{
  int64 favorite_num=1;
  int64 comment_num=2;
  bool is_favorite=3;
}
service VideoInfo{
  rpc GetVideoInfoAboutFavAndCom(VideoInfoRequest)returns (VideoInfoResponse){}
}